# MoonPower

./: MANIFEST.in  Pk_multipoles.ipynb  README.md  pyproject.toml  requirements.txt  setup.py  useful_functions.pyx
examples/: pdr1_spring_bin3_cic.json  run_pdr1_legacy.py
pk_multipoles/: README.md  config.py  deconvolution.py  mass_assignment.py  setup.py  spectrum.py  useful_functions.c  useful_functions.pyx
pk_multipoles/pk_multipoles/: __init__.py  cli.py  deconvolution.py  grid.py  harmonics.py  mass_assignment.py  spectrum.py
pk_multipoles/tests/: conftest.py
tests/: test_synthetic.py
